<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#C5C1C1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <FrameLayout
        android:id="@+id/TopLine"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:background="#FFAA00"
        app:layout_constraintBottom_toTopOf="@+id/ETUname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingTop="10dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="102dp" />
    </FrameLayout>

    <EditText
        android:id="@+id/ETUname"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:background="@color/material_dynamic_primary95"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <EditText
        android:id="@+id/ETEmail"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:background="@color/material_dynamic_primary95"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETUname"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/titleOfCity"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:paddingTop="3dp"
        android:text="@string/varos"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETEmail" />

    <Spinner
        android:id="@+id/varosom"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:background="@color/material_dynamic_primary95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <EditText
        android:id="@+id/ETPasswdAgain"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginBottom="192dp"
        android:background="@color/material_dynamic_primary95"
        android:ems="10"
        android:hint="@string/pwdagaon"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETPasswd"
        app:layout_constraintVertical_bias="0.227" />

    <LinearLayout
        android:id="@+id/btnContainerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/BottomLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETPasswdAgain">


        <Button
            android:id="@+id/BtnRegister"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:backgroundTint="#8BC34A"
            android:onClick="register"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETPasswdAgain"
            app:layout_constraintVertical_bias="0.213" />

        <Button
            android:id="@+id/BtnBack"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="#FF5722"
            android:onClick="back"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETPasswdAgain"
            app:layout_constraintVertical_bias="0.213" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/BottomLine"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:background="#FFAA00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/varosom"
        app:layout_constraintVertical_bias="1.0">

    </FrameLayout>

    <EditText
        android:id="@+id/ETPasswd"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:background="@color/material_dynamic_primary95"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/BottomLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533" />

</androidx.constraintlayout.widget.ConstraintLayout>